<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.QuizActivity"
    android:background="@color/almost_white"
    tools:ignore="RtlHardcoded,RtlSymmetry" >

    <View
        android:id="@+id/bg_top_header"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@drawable/ic_bg_topheader"
        android:fitsSystemWindows="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/mm"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewPoints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bg_top_header"
        app:layout_constraintVertical_bias="0.0" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bgwhite"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.811">

        <TextView
            android:id="@+id/textViewQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/mm"
            android:text="@string/question"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.128"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.21" />


        <ProgressBar
            android:id="@+id/progressBar"
            android:progressTint="@android:color/holo_green_light"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            />

        <Button
            android:id="@+id/option_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_complete_border_background"
            android:fontFamily="@font/ml"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="20dp"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:text="@string/option"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="14sp" />


        <Button
            android:id="@+id/option_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_complete_border_background"
            android:fontFamily="@font/ml"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="20dp"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:text="@string/option"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/option_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_complete_border_background"
            android:fontFamily="@font/ml"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="20dp"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:text="@string/option"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="14sp" />


        <Button
            android:id="@+id/option_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_complete_border_background"
            android:fontFamily="@font/ml"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="20dp"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:text="@string/option"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/option_e"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_complete_border_background"
            android:fontFamily="@font/ml"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="20dp"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:text="@string/option"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="203dp"
        android:layout_height="76dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bgwhite"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.195" />

        <TextView
            android:id="@+id/textViewPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/_0_points"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:fontFamily="@font/mm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chronometer"
            app:layout_constraintVertical_bias="0.384" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>